tests/asm-link/error-recovery/rgbasm.err
error: syntax error: unexpected number
   ╭─[ test.asm:3:16 ]
   │
 3 │     println 42, 1 2 3 4
   │                   ┬  
   │                   ╰── expected ",", "+", "-", "*", "/", "%", "**", ...14 others
───╯
error: no symbol called `syntax`
   ╭─[ test.asm:7:10 ]
   │
 5 │ for n, 3
   │ ─┬─  
   │  ╰─── in the 1st iteration of this loop
   │ 
 7 │     println syntax error
   │             ───┬──  
   │                ╰──── no symbol by this name exists at this point
───╯
error: syntax error: unexpected identifier
   ╭─[ test.asm:7:17 ]
   │
 5 │ for n, 3
   │ ─┬─  
   │  ╰─── in the 1st iteration of this loop
   │ 
 7 │     println syntax error
   │                    ──┬──  
   │                      ╰──── expected ",", "(", "+", "-", "*", "/", "%", ...19 others
───╯
error: no symbol called `syntax`
   ╭─[ test.asm:7:10 ]
   │
 5 │ for n, 3
   │ ─┬─  
   │  ╰─── in the 2nd iteration of this loop
   │ 
 7 │     println syntax error
   │             ───┬──  
   │                ╰──── no symbol by this name exists at this point
───╯
error: syntax error: unexpected identifier
   ╭─[ test.asm:7:17 ]
   │
 5 │ for n, 3
   │ ─┬─  
   │  ╰─── in the 2nd iteration of this loop
   │ 
 7 │     println syntax error
   │                    ──┬──  
   │                      ╰──── expected ",", "(", "+", "-", "*", "/", "%", ...19 others
───╯
error: no symbol called `syntax`
   ╭─[ test.asm:7:10 ]
   │
 5 │ for n, 3
   │ ─┬─  
   │  ╰─── in the 3rd iteration of this loop
   │ 
 7 │     println syntax error
   │             ───┬──  
   │                ╰──── no symbol by this name exists at this point
───╯
error: syntax error: unexpected identifier
   ╭─[ test.asm:7:17 ]
   │
 5 │ for n, 3
   │ ─┬─  
   │  ╰─── in the 3rd iteration of this loop
   │ 
 7 │     println syntax error
   │                    ──┬──  
   │                      ╰──── expected ",", "(", "+", "-", "*", "/", "%", ...19 others
───╯
7 errors generated.
